--- a/Ecom/Views/Cart/GuestCart.cshtml
+++ b/Ecom/Views/Cart/GuestCart.cshtml
@@ -447,7 +447,7 @@
                                     <h6 class="product-title">@item.ProductName</h6>
                                     <p class="product-price">
                                         <i class="fas fa-tag"></i>
-                                        $@item.Price.ToString("F2") each
+                                        ₱@item.Price.ToString("F2") each
                                     </p>
                                 </div>
 
@@ -468,7 +468,7 @@
                                 </div>
 
                                 <div class="col-md-2 col-sm-4 mb-3 mb-md-0">
-                                    <div class="item-total">$@item.Total.ToString("F2")</div>
+                                    <div class="item-total">₱@item.Total.ToString("F2")</div>
                                 </div>
 
                                 <div class="col-md-1 col-sm-2">
