--- a/Ecom/Views/Product/Details.cshtml
+++ b/Ecom/Views/Product/Details.cshtml
@@ -270,7 +270,7 @@
                         <p class="product-description">@Model.Description</p>
                     }
 
-                    <div class="price">$@Model.Price.ToString("F2")</div>
+                <div class="price">₱@Model.Price.ToString("F2")</div>
 
                     <div class="product-info">
                         <div class="info-item">
