--- a/Ecom/Views/Product/Index.cshtml
+++ b/Ecom/Views/Product/Index.cshtml
@@ -470,7 +470,7 @@
 
                             <div class="product-footer">
                                 <div class="product-price-row">
-                                    <span class="product-price">$@product.Price.ToString("F2")</span>
+                                    <span class="product-price">₱@product.Price.ToString("F2")</span>
                                     <span class="product-category">@product.CategoryName</span>
                                 </div>
 
