--- a/Ecom/Views/Reports/SalesSummary.cshtml
+++ b/Ecom/Views/Reports/SalesSummary.cshtml
@@ -40,7 +40,7 @@
             <div class="card text-center">
                 <div class="card-body">
                     <h5 class="card-title">Total Revenue</h5>
-                    <h3 class="text-success">$@Model.TotalRevenue.ToString("N2")</h3>
+                    <h3 class="text-success">₱@Model.TotalRevenue.ToString("N2")</h3>
                 </div>
             </div>
         </div>
@@ -48,7 +48,7 @@
             <div class="card text-center">
                 <div class="card-body">
                     <h5 class="card-title">Average Order Value</h5>
-                    <h3 class="text-info">$@Model.AverageOrderValue.ToString("N2")</h3>
+                    <h3 class="text-info">₱@Model.AverageOrderValue.ToString("N2")</h3>
                 </div>
             </div>
         </div>
