--- a/Ecom/Views/Shared/_Layout.cshtml
+++ b/Ecom/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
             line-height: 1.6;
             color: #333;
             background-color: #f8fffe;
+            margin-bottom: 150px;
         }
 
         /* Header Styles */
@@ -241,7 +242,7 @@
             color: white;
             text-align: center;
             padding: 2rem 0;
-            margin-top: 5rem;
+            margin-top: 10rem;
         }
 
         /* Mobile Responsive */
@@ -329,7 +330,7 @@
                     </li>
                     <li>
                         <a asp-area="" asp-controller="Home" asp-action="Contact">
-                            <i class="fas fa-flask me-1"></i>Contact
+                            <i class="fas fa-phone me-1"></i>Contact
                         </a>
                     </li>
                     <li>
@@ -385,12 +386,14 @@
                 else
                 {
                     <!-- Login/Register Buttons -->
-                    <a class="icon-btn" asp-controller="Account" asp-action="Login">
-                        <i class="fas fa-sign-in-alt"></i>
-                    </a>
-                    <a class="icon-btn" asp-controller="Account" asp-action="Register" title="Register">
-                        <i class="fas fa-user-plus"></i>
-                    </a>
+            <a class="icon-btn" asp-controller="Account" asp-action="Login">
+                @*<i class="fas fa-sign-in-alt"></i>*@
+                Login
+            </a>
+            <a class="icon-btn" asp-controller="Account" asp-action="Register" title="Register">
+                @*  <i class="fas fa-user-plus"></i>*@
+                Register
+            </a>
                 }
 
                 <!-- Shopping Cart -->
