--- a/Ecom/Views/Cart/Index.cshtml
+++ b/Ecom/Views/Cart/Index.cshtml
@@ -15,6 +15,7 @@
         max-width: 1200px;
         margin: 0 auto;
         padding: 2rem 1rem;
+        padding-bottom: 500px;
     }
 
     .cart-header {
