--- a/Ecom/Views/Home/Index.cshtml
+++ b/Ecom/Views/Home/Index.cshtml
@@ -539,7 +539,7 @@
 
                                 <div class="product-footer">
                                     <div class="product-price-row">
-                                        <div class="product-price">$@product.Price.ToString("F2")</div>
+                                        <div class="product-price">₱@product.Price.ToString("F2")</div>
                                         @if (!string.IsNullOrEmpty(product.CategoryName))
                                         {
                                             <div class="product-category">@product.CategoryName</div>
