--- a/Ecom/Views/Order/Checkout.cshtml
+++ b/Ecom/Views/Order/Checkout.cshtml
@@ -43,13 +43,13 @@
                     {
                         <div class="d-flex justify-content-between mb-2">
                             <span>@item.ProductName x @item.Quantity</span>
-                            <span>$@item.Total.ToString("F2")</span>
+                            <span>₱@item.Total.ToString("F2")</span>
                         </div>
                     }
                     <hr>
                     <div class="d-flex justify-content-between mb-2">
                         <span>Subtotal:</span>
-                        <span>$@Model.Sum(x => x.Total).ToString("F2")</span>
+                        <span>₱@Model.Sum(x => x.Total).ToString("F2")</span>
                     </div>
                     <div class="d-flex justify-content-between mb-2">
                         <span>Shipping:</span>
@@ -58,7 +58,7 @@
                     <hr>
                     <div class="d-flex justify-content-between">
                         <strong>Total:</strong>
-                        <strong>$@Model.Sum(x => x.Total).ToString("F2")</strong>
+                        <strong>₱@Model.Sum(x => x.Total).ToString("F2")</strong>
                     </div>
                 </div>
             </div>
