--- a/Ecom/Views/Order/Index.cshtml
+++ b/Ecom/Views/Order/Index.cshtml
@@ -104,7 +104,7 @@
                                 <small class="text-muted">Total Orders</small>
                             </div>
                             <div class="col-md-4">
-                                <h5 class="text-success">$@Model.Sum(o => o.TotalAmount).ToString("N2")</h5>
+                                <h5 class="text-success">₱@Model.Sum(o => o.TotalAmount).ToString("N2")</h5>
                                 <small class="text-muted">Total Spent</small>
                             </div>
                             <div class="col-md-4">
